completed index.html

--- a/index.html
+++ b/index.html
@@ -6,141 +6,61 @@
 <body>
 	
 	<header>
-		Joshua Eric Ward
+		
+		<h1>
+
+			Joshua Eric Ward
+
+		</h1>
+
+		<nav>
+
+			<H3>
+
+				<p>
+					About
+				</p>
+			
+				<p>
+					Contact
+				</p>
+			
+				<p>
+					Portfolio
+				</p>
+
+			</H3>
+
+		</nav>
+
 	</header>
 
-	<nav>
-		<p>
-			About
-		</p>
-		<p>
-			Contact
-		</p>
-		<p>
-			Portfolio
-		</p>
-	</nav>
+	<div>
+		<header>
 
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pellentesque leo neque, et auctor turpis iaculis ac. Nulla quis lorem porttitor, gravida nisi in, ornare mi. Duis interdum cursus est, vel pellentesque magna commodo nec. Phasellus ex elit, commodo eu massa non, elementum blandit nunc. Nam rutrum, tellus sed vestibulum egestas, nunc dui aliquet tortor, vitae interdum lectus sem sed dui. Pellentesque mi elit, euismod sit amet malesuada sed, tristique ut diam. Maecenas ultrices egestas orci, in semper neque porta quis. Fusce ornare, tellus eu varius dapibus, urna nisi ultrices purus, ac accumsan quam sapien in magna. Suspendisse potenti. Morbi facilisis erat in tortor iaculis, mattis viverra quam aliquet. Curabitur tempus ornare finibus.
-	</p>	
+			<h1>
+				About Me
+			</h1>
 
-	<p>
-		Aliquam sodales mauris at ante molestie, a scelerisque nisl interdum. Nam vel hendrerit mi. Praesent scelerisque, ante vel varius mollis, purus justo egestas lacus, consequat dignissim augue augue ac purus. Proin facilisis fermentum metus, non sodales elit feugiat ut. Donec feugiat egestas accumsan. Donec auctor eros ex, a lobortis ante ultrices id. Aliquam hendrerit ante ac elementum tincidunt. Proin sapien enim, tristique varius magna ut, scelerisque euismod turpis. Suspendisse eget neque eleifend, iaculis tellus vitae, sodales lectus. Nam id magna tempus, tempus augue sed, laoreet urna.
-	</p>
+			<img src="assets/images/me.jpg">
 
+			<section>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pellentesque leo neque, et auctor turpis iaculis ac. Nulla quis lorem porttitor, gravida nisi in, ornare mi. Duis interdum cursus est, vel pellentesque magna commodo nec. Phasellus ex elit, commodo eu massa non, elementum blandit nunc. Nam rutrum, tellus sed vestibulum egestas, nunc dui aliquet tortor, vitae interdum lectus sem sed dui. Pellentesque mi elit, euismod sit amet malesuada sed, tristique ut diam. Maecenas ultrices egestas orci, in semper neque porta quis. Fusce ornare, tellus eu varius dapibus, urna nisi ultrices purus, ac accumsan quam sapien in magna. Suspendisse potenti. Morbi facilisis erat in tortor iaculis, mattis viverra quam aliquet. Curabitur tempus ornare finibus.
+				</p>
+			</section>
 
-	<p>
-		Curabitur varius elit et enim volutpat, nec tempor est tristique. Praesent efficitur ipsum non lectus consectetur, sit amet ullamcorper lacus posuere. Cras fringilla vitae risus vitae consequat. Vestibulum id ullamcorper odio. Fusce ac eleifend nunc. Nunc eu ipsum sit amet leo auctor molestie. Nulla sit amet arcu molestie, vestibulum quam id, rhoncus odio. Suspendisse non maximus neque.
-	</p>
+		</header>
 
-	<p>
-		In vel quam et neque varius ullamcorper vitae eu ipsum. Integer ac luctus tellus. Sed dignissim, urna nec volutpat lacinia, leo erat tincidunt elit, at pulvinar eros nulla et eros. Aliquam rutrum, neque vel ullamcorper ornare, nisl velit convallis nisl, et hendrerit justo ipsum ac mi. Aenean a sodales dui, sit amet efficitur libero. Nunc elit tellus, egestas a libero eleifend, gravida convallis leo. Proin elementum tempor dignissim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-	</p>
+	</div>
 
+	<footer> 
 
-	<p>
-		Proin tempus eget nibh quis facilisis. Vivamus luctus at ex et porta. Praesent cursus condimentum orci. Quisque sed egestas nibh. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean elementum felis vel ipsum tempus, vitae tempor dolor vulputate. Vestibulum fermentum tellus augue, eu sodales nisl gravida eu. Praesent magna leo, sollicitudin vitae iaculis non, varius semper est. Curabitur pharetra vel mi ac commodo. Fusce rhoncus tortor sit amet urna fringilla, nec tempor enim condimentum. Donec ac massa viverra, tempus arcu a, egestas nisl.
-	</p>
-
-
-	<p>
-		Sed sed arcu et magna lobortis egestas. Phasellus eu ullamcorper ante. Mauris elementum massa risus, sed lobortis mi ornare vitae. Mauris at odio pretium, pharetra urna quis, molestie lorem. Nullam eu massa id lectus bibendum tristique nec sit amet velit. Aliquam bibendum velit diam, ac lobortis ex consequat vel. Vivamus ut quam sollicitudin, varius nisi nec, sollicitudin sapien. Sed scelerisque, dolor in ultricies faucibus, lorem eros lacinia ex, eget cursus diam massa ac odio. Donec sollicitudin metus non felis rutrum malesuada. Sed eget elit pellentesque, tincidunt est at, sagittis augue. Proin ut tellus sed erat malesuada consectetur. Morbi mollis quam ornare elit molestie, quis lacinia dolor pharetra. Aenean venenatis at lectus ut fermentum. Fusce id pellentesque odio. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-	</p>
-
-
-	<p>
-		Aliquam placerat mattis urna, non venenatis libero malesuada a. Vestibulum euismod erat id enim euismod rutrum. Maecenas consequat efficitur viverra. Praesent metus massa, congue a dui non, scelerisque consectetur ex. Nulla felis metus, eleifend eu ullamcorper in, lacinia sit amet ante. Sed scelerisque ultricies sapien, posuere vulputate ex elementum viverra. Proin aliquet varius ligula, imperdiet aliquam justo facilisis id. Pellentesque vestibulum mi eget maximus dapibus. Praesent eu dui ante. Ut commodo efficitur urna in euismod. Pellentesque tincidunt tincidunt dui sed dignissim. Maecenas a ligula sed urna porta euismod vel et diam. Proin sagittis non ante vel rutrum. Donec suscipit, nibh et blandit maximus, neque turpis semper nisi, a maximus leo sem sed orci. Proin ut maximus nulla. Phasellus placerat augue nec tellus euismod, non blandit ex placerat.
-	</p>	
-
-	<p>
-		Vivamus eu nisl sit amet nisl faucibus accumsan. In et nulla vitae sapien feugiat vestibulum. Suspendisse potenti. Integer ultricies leo sed sem tincidunt rhoncus. Nunc ut gravida diam. Nunc aliquam molestie imperdiet. Vivamus porta ante vel enim lobortis, vel aliquet tellus rutrum. In suscipit placerat blandit. Praesent pretium volutpat nibh sit amet gravida. Aenean congue tellus ex, ac faucibus ex pulvinar eu. Pellentesque id lacus purus. Pellentesque vehicula congue dolor ac tristique. Integer vulputate, elit in varius scelerisque, felis tortor hendrerit felis, ut suscipit quam nisl sit amet lectus.
-	</p>
-
-	<p>
-		Maecenas a molestie quam. Ut pretium condimentum lacinia. Integer in lobortis odio. Suspendisse eget diam ultrices, commodo orci at, laoreet dolor. Nulla facilisi. Praesent arcu libero, convallis vel vehicula vel, bibendum sed odio. Donec sagittis erat velit, sed dignissim augue maximus id. Cras sodales a mauris suscipit euismod.
-	</p>
-
-	<p>
-		Vestibulum consequat pretium ipsum, nec ultricies eros ullamcorper et. Suspendisse elementum nulla ut pellentesque malesuada. Cras ex lorem, dapibus ac ullamcorper vel, eleifend nec dui. Sed porttitor ipsum in mi sollicitudin, eu laoreet nibh finibus. Duis eu euismod nunc. Suspendisse sagittis mauris quis ex rhoncus lacinia. Aenean consectetur enim sed nisl malesuada, at facilisis ligula venenatis. Phasellus vitae bibendum diam. Aenean at viverra nibh.
-	</p>
-
-	<p>
-		Sed et eros mollis, pretium urna et, aliquam lectus. Ut sodales efficitur sapien, id ornare diam consectetur ut. Aliquam eu facilisis nisl, ac auctor dui. Nunc mattis rhoncus tortor ac accumsan. Aenean et purus euismod, ultrices enim ac, tempor lacus. Vestibulum libero risus, pulvinar molestie odio vel, tristique laoreet lorem. Morbi et consequat ante, ut aliquet felis. Cras non velit eu diam rhoncus maximus id eu mi. Maecenas nec odio a ante vestibulum scelerisque sed a diam. Morbi ut ipsum id massa tristique pulvinar et in nisi.
-	</p>
-
-	<p>
-		Nunc cursus massa eu tortor tincidunt, varius ullamcorper enim rhoncus. Aenean ultricies nulla vel sagittis iaculis. Vivamus iaculis enim vel malesuada sagittis. Aenean vulputate hendrerit dolor vitae pellentesque. Etiam feugiat ullamcorper eros vel ultricies. Mauris velit turpis, vulputate ac vehicula eget, lobortis id nulla. Phasellus eu quam sollicitudin, tincidunt dolor sed, vulputate erat. Mauris pharetra nulla et tortor mollis posuere. Mauris tempor quam elementum, facilisis nisl eget, cursus dolor. Integer nibh turpis, porttitor at hendrerit eu, volutpat non quam. Pellentesque a lectus massa.
-	</p>
-
-	<p>
-		Vivamus venenatis libero a justo fringilla venenatis. Donec et mauris vel magna dapibus fermentum a nec dui. Aenean et dolor venenatis, finibus risus eu, convallis tellus. Sed vehicula rutrum ornare. Suspendisse dictum diam a luctus euismod. Mauris aliquam pulvinar mauris eu lacinia. In dapibus tortor a eleifend tincidunt. Proin consequat augue tempor velit fringilla tincidunt. Integer ultricies mattis pulvinar. Maecenas tempor congue mauris, ac accumsan nibh cursus at. Suspendisse magna ante, suscipit ut ultricies et, molestie non purus. Sed sed metus et lorem iaculis pulvinar sagittis at nibh. Nulla posuere orci diam. Vestibulum molestie, risus quis pulvinar tincidunt, diam mauris convallis justo, eget tristique arcu nunc et quam.
-	</p>
-
-	<p>
-		Donec id condimentum dolor. Proin mollis cursus nunc, ut ullamcorper ex sodales eget. Suspendisse auctor nisl justo, et tristique quam consequat nec. Quisque ut aliquet neque. Praesent porta ligula ut ex volutpat, id viverra augue tristique. Nam et sollicitudin sapien. Quisque erat magna, cursus in lacinia id, posuere sed elit. Maecenas eget tincidunt magna. Mauris facilisis, arcu in pulvinar imperdiet, ante orci convallis tellus, in vulputate sem lacus quis arcu. Integer urna dui, vestibulum a ultricies eget, tempor et purus. Aliquam a eleifend mi, ac ornare 
-		ipsum.
-	</p>
-
-	<p>
-		Fusce faucibus leo ut magna imperdiet, ut vehicula tellus consectetur. Nullam pellentesque tincidunt viverra. Suspendisse sodales pulvinar nisi, vel dapibus nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus non dictum ligula. Quisque vitae dignissim lacus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras efficitur leo eget nisi finibus lobortis. Ut in ex arcu. Suspendisse commodo sed risus at efficitur. Morbi sed nisi ligula.
-	</p>
-
-	<p>
-		Praesent ac eros efficitur, accumsan sapien vel, faucibus arcu. Mauris vitae metus enim. Etiam in dolor augue. Aliquam bibendum porttitor nisi, vitae ultrices augue ornare at. Integer mattis vel augue consectetur mollis. Vivamus aliquam sit amet nibh et malesuada. Nam a mollis felis. Aliquam nec arcu mi. Etiam accumsan, dui eu condimentum tempor, nibh dui bibendum tellus, eu dapibus nisi dolor id tellus. Vivamus dictum dictum est, quis luctus nunc sollicitudin at. Maecenas in purus eu ex gravida rutrum eget ut tortor. Aenean et ligula neque. Quisque feugiat hendrerit commodo.
-	</p>
-
-	<p>
-		In vel lorem vitae dolor pretium aliquam ut vel purus. Sed quam justo, eleifend pharetra felis at, facilisis ultrices ligula. Curabitur congue urna ut diam elementum mollis. Mauris magna erat, tincidunt vel venenatis sed, ullamcorper nec metus. Nullam viverra maximus nibh, a cursus enim faucibus nec. Vivamus mattis dolor accumsan, semper dui vitae, ultrices mi. Duis nec enim nunc. Donec varius sagittis vulputate.
-	</p>
-
-	<p>
-		Morbi imperdiet turpis sed ipsum tempor, vitae blandit nisi tincidunt. Sed id fringilla turpis, a ornare urna. Morbi gravida tempor justo vel luctus. Pellentesque scelerisque ultricies arcu sed tempor. Maecenas elementum quam at interdum euismod. Quisque luctus nunc a dignissim gravida. Donec id euismod augue. Praesent pulvinar, tortor et bibendum gravida, turpis libero cursus sapien, sit amet convallis quam elit ut ante. In placerat, sapien quis aliquam hendrerit, tellus orci sagittis ligula, non maximus massa magna id risus. Aliquam at diam nunc. Aliquam nec ante nec metus imperdiet tempor cursus sit amet justo.
-	</p>
-
-	<p>
-		Cras vel neque nisl. Nulla lacinia accumsan massa vel congue. Vivamus eleifend erat ut ex malesuada mattis. Phasellus quis quam consectetur, aliquam nibh eget, gravida ligula. Nullam turpis purus, fringilla eu sapien et, dapibus imperdiet nibh. Nullam rutrum non arcu in interdum. Nunc posuere sollicitudin placerat. Etiam tempor turpis eget ex maximus, sit amet aliquam quam varius. Morbi accumsan, ligula blandit facilisis consequat, erat lectus sodales nisi, ac pellentesque enim sapien sit amet turpis. Nullam lacinia fermentum faucibus. In nec ullamcorper neque. Pellentesque aliquam, libero quis posuere iaculis, justo leo ultrices felis, et molestie ante lectus ut dui. Nulla pulvinar condimentum accumsan. Duis ultrices mollis fermentum.
-	</p>
-
-	<p>
-		Duis suscipit tempor ante, ut rutrum nisi aliquam id. Fusce purus tellus, accumsan sed eleifend cursus, iaculis non magna. Nam velit leo, auctor ac leo eget, suscipit imperdiet risus. Sed feugiat odio urna, vel fringilla erat iaculis ornare. Curabitur eget lacinia orci. Vestibulum lobortis nunc dapibus lectus consectetur suscipit. Ut porttitor ac elit at posuere.
-	</p>
+		<section>
+			&copy; Copyright 2018 Joshua Ward
+		</section>
 	
-	<p>
-		Suspendisse gravida rhoncus vestibulum. Aliquam tincidunt augue at ultrices iaculis. Morbi varius lobortis varius. Integer quis turpis tempus, tristique diam nec, ornare diam. Proin hendrerit mattis rutrum. Phasellus laoreet metus nisl, placerat hendrerit felis faucibus a. Mauris nec odio in sem consequat vehicula non sed massa. Phasellus congue sollicitudin justo, vitae consectetur sapien. Duis bibendum eros et arcu auctor posuere. Cras pellentesque sapien ac odio lobortis, id tempor risus tempus. In vitae felis sit amet justo porttitor lacinia. Aenean sed est at ligula vulputate mattis quis nec odio. Duis maximus lectus quis justo varius ultricies sed a nisl. Vivamus posuere massa non magna faucibus accumsan. Phasellus vestibulum volutpat magna eu mattis. Mauris condimentum id leo quis dignissim.
-	</p>
-
-	<p>
-		Suspendisse nec magna eget diam accumsan eleifend eu vitae ante. Donec purus quam, tempus quis sapien tincidunt, convallis dictum augue. Quisque libero odio, venenatis a lorem ut, rhoncus condimentum orci. Sed iaculis eget ligula nec facilisis. Ut sit amet felis luctus, accumsan ante eget, fermentum sapien. Donec a auctor nulla. Cras iaculis, urna vel mollis consequat, neque velit lobortis velit, vitae convallis felis lectus ac ante. Nullam vehicula dui non eros luctus tincidunt.
-	</p>
-
-	<p>
-		Pellentesque nec tellus eu tortor sagittis commodo sed id sapien. Fusce dignissim pulvinar eros et vulputate. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sit amet ipsum id mi fringilla ultrices. Proin convallis diam sit amet ex laoreet convallis. Integer aliquet erat eu sem maximus lobortis non quis justo. Suspendisse nec lorem a arcu pretium congue vel ac metus. Aenean posuere eros nunc, nec luctus sapien dignissim non. Quisque nisl leo, interdum sed cursus ut, vestibulum ac nisl. Suspendisse in aliquet nulla. Nam interdum ac ex sit amet blandit.
-	</p>
-
-	<p>
-		Vestibulum viverra erat quis pharetra fringilla. Duis venenatis elementum venenatis. Sed viverra erat sit amet neque dignissim auctor non sed odio. Praesent ut rutrum nulla, eu scelerisque diam. Pellentesque vitae ultricies felis. Integer auctor, nibh ac pulvinar vulputate, sem tellus tempus lorem, quis eleifend lectus mauris quis nisl. Curabitur tristique accumsan magna, a tincidunt enim elementum laoreet. Curabitur porta semper libero sed dapibus.
-	</p>
-
-	<p>
-		Donec et nunc metus. Donec ut cursus nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed id nunc condimentum mauris congue condimentum a eget leo. Proin eu neque porta, porta massa eget, viverra felis. Suspendisse porttitor in urna eu vestibulum. Aliquam tempus arcu a venenatis sagittis. Suspendisse in dignissim lectus. Donec tincidunt tristique tellus. Mauris maximus mi purus, nec pellentesque sem sodales ut. Cras hendrerit ac lacus vel efficitur.
-	</p>
-
-	<P>
-		Mauris venenatis eros dui, quis elementum mi pharetra non. Donec pharetra porta faucibus. Nullam pellentesque quam libero, eget malesuada enim auctor id. Sed sit amet quam varius, bibendum nibh vel, efficitur sapien. Cras mollis libero sit amet turpis hendrerit, quis volutpat ligula laoreet. Sed in faucibus quam, a pellentesque sem. Nam porttitor at dolor et pharetra.
-	</P>
-
-	<p>
-		Maecenas varius neque dolor, at facilisis ipsum consequat vel. Suspendisse commodo quis elit in placerat. Vivamus magna sem, consequat sit amet neque ut, mattis faucibus turpis. Suspendisse molestie in lectus sit amet varius. Sed viverra risus luctus, volutpat tellus ac, fermentum lacus. Fusce pretium imperdiet lorem, in pulvinar sem. Vivamus vel ultricies ante, ut tristique arcu. Duis elementum congue nibh, quis iaculis sem condimentum id. Suspendisse justo est, bibendum eget malesuada et, convallis in libero. Duis sit amet odio non mi aliquam laoreet.
-	</p>
-
-	<p>
-		Cras laoreet vestibulum ex, sed euismod velit accumsan et. Maecenas eleifend fringilla massa, vitae semper augue auctor quis. Etiam imperdiet magna sit amet tortor pellentesque, id sagittis augue placerat. Integer non arcu imperdiet, accumsan nisl vitae, auctor justo. Phasellus erat massa, aliquam a nisi nec, consequat semper sem. Phasellus aliquam, magna ut luctus feugiat, lectus lorem rutrum odio, quis rhoncus purus urna nec purus. Aliquam erat volutpat. Quisque dictum scelerisque lacinia. Sed enim ante, pellentesque nec pharetra id, tristique in nisl. Fusce ac nunc et lectus maximus semper. Nullam gravida sapien diam, vitae ornare neque placerat gravida. Integer elementum, magna in mollis blandit, lorem mauris scelerisque ipsum, vitae dictum ipsum lorem nec turpis. Etiam ut consectetur nisl, quis tincidunt lorem. Quisque eu dignissim neque.
-	</p>
-
-	<p>
-		Praesent ac ex dapibus, tempus nisi quis, iaculis ligula. Aenean venenatis, est nec volutpat vestibulum, est elit commodo risus, eget hendrerit nunc purus et diam. Vivamus non euismod sapien. Sed commodo porta orci id auctor. Quisque rhoncus sodales risus id euismod. Nunc varius, leo quis mollis volutpat, arcu turpis pretium nisi, vel vestibulum dui velit quis justo. Morbi euismod neque nec arcu mollis convallis. Nunc aliquam fringilla felis ac lacinia. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus blandit maximus vestibulum. Morbi posuere aliquam tellus, fermentum fringilla nisl consequat sit amet.
-	</p>
+	</footer>
 
 </body>
 </html>
